--- a/index.html
+++ b/index.html
@@ -104,6 +104,24 @@
         </section>
         -->
  
+        <main>
+            <section class="section-about">
+                <div class="u-center-text u-margin-bottom-8"> <!-- Utility class -->
+                    <h2 class="heading-secondary">
+                        Exciting tours for adventurous people
+                    </h2>
+                </div>
+
+                <div class="row">
+                    <div class="col-1-of-2">
+                        Text content
+                    </div>
+                    <div class="col-1-of-2">
+                        Image composition
+                    </div>
+                </div>
+            </section>
+        </main>
     </body>
 
 </html>
