--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
  
         <main>
             <section class="section-about">
-                <div class="u-center-text u-margin-bottom-8"> <!-- Utility class -->
+                <div class="u-center-text u-margin-bottom-big"> <!-- Utility class -->
                     <h2 class="heading-secondary">
                         Exciting tours for adventurous people
                     </h2>
@@ -114,7 +114,17 @@
 
                 <div class="row">
                     <div class="col-1-of-2">
-                        Text content
+                        <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quibusdam quisquam modi, est quam, reiciendis nostrum itaque placeat magnam odio atque nihil? Voluptatum consequuntur sunt, eligendi laboriosam sapiente asperiores minima?
+                        </p>
+                        
+                        <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur quas esse pariatur tempora dicta libero explicabo sint.
+                        </p>
+
+                        <a href="#0" class="btn-text">Learn more &rarr;</a>
                     </div>
                     <div class="col-1-of-2">
                         Image composition
