--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
         -->
  
         <main>
+
             <section class="section-about">
                 <div class="u-center-text u-margin-bottom-big"> <!-- Utility class -->
                     <h2 class="heading-secondary">
@@ -118,7 +119,7 @@
                         <p class="paragraph">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quibusdam quisquam modi, est quam, reiciendis nostrum itaque placeat magnam odio atque nihil? Voluptatum consequuntur sunt, eligendi laboriosam sapiente asperiores minima?
                         </p>
-                        
+                         
                         <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
                         <p class="paragraph">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur quas esse pariatur tempora dicta libero explicabo sint.
@@ -127,10 +128,15 @@
                         <a href="#0" class="btn-text">Learn more &rarr;</a>
                     </div>
                     <div class="col-1-of-2">
-                        Image composition
+                        <div class="composition">
+                            <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+                            <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+                            <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+                        </div>
                     </div>
                 </div>
             </section>
+
         </main>
     </body>
 
