--- a/index.html
+++ b/index.html
@@ -17,15 +17,20 @@
         <div class="navigation">
             <input type="checkbox" id="navi-toggle" class="navigation__checkbox">
 
-            <label for="navi-toggle" class="navigation__button">MENU</label>
+            <label for="navi-toggle" class="navigation__button">
+                <span class="navigation__icon">&nbsp;</span>
+            </label>
 
             <div class="navigation__background">&nbsp;</div>
 
             <nav class="navigation__nav">
                 <ul class="navigation__list">
-                    <li class="navigation__item"><a href="#1" class="navigation__link"><span>01</span>About Natours</a></li>
-                    <li class="navigation__item"><a href="#1" class="navigation__link"><span>02</span>Your benefits</a></li>
-                    <li class="navigation__item"><a href="#1" class="navigation__link"><span>03</span>Popular tours</a></li>
+                    <li class="navigation__item"><a href="#1" class="navigation__link"><span>01</span>About Natours</a>
+                    </li>
+                    <li class="navigation__item"><a href="#1" class="navigation__link"><span>02</span>Your benefits</a>
+                    </li>
+                    <li class="navigation__item"><a href="#1" class="navigation__link"><span>03</span>Popular tours</a>
+                    </li>
                     <li class="navigation__item"><a href="#1" class="navigation__link"><span>04</span>Stories</a></li>
                     <li class="navigation__item"><a href="#1" class="navigation__link"><span>05</span>Book now</a></li>
                 </ul>
@@ -441,9 +446,11 @@
                 </div>
                 <div class="col-1-of-2">
                     <p class="footer__copyright">
-                        Built by <a href="#2" class="footer__link">Jonas Schmedtmann</a> 
-                        for his online course <a href="#2" class="footer__link">Advanced CSS and Sass</a>. 
-                        Copyrigth &copy; by Jonas Schmedtmann. You are 100% allowed to use this webpage for both personal and commercial use, but NOT to claim it as your own design. A credit to the original author, Jonas Schmedtmann, is of course, highly appreciated. 
+                        Built by <a href="#2" class="footer__link">Jonas Schmedtmann</a>
+                        for his online course <a href="#2" class="footer__link">Advanced CSS and Sass</a>.
+                        Copyrigth &copy; by Jonas Schmedtmann. You are 100% allowed to use this webpage for both
+                        personal and commercial use, but NOT to claim it as your own design. A credit to the original
+                        author, Jonas Schmedtmann, is of course, highly appreciated.
                     </p>
                 </div>
             </div>
