--- a/index.html
+++ b/index.html
@@ -25,14 +25,19 @@
 
             <nav class="navigation__nav">
                 <ul class="navigation__list">
-                    <li class="navigation__item"><a href="#1" class="navigation__link"><span>01</span>About Natours</a>
+                    <li class="navigation__item"><a href="#section-about" class="navigation__link"><span>01</span>About
+                            Natours</a>
                     </li>
-                    <li class="navigation__item"><a href="#1" class="navigation__link"><span>02</span>Your benefits</a>
+                    <li class="navigation__item"><a href="#section-features"
+                            class="navigation__link"><span>02</span>Your benefits</a>
                     </li>
-                    <li class="navigation__item"><a href="#1" class="navigation__link"><span>03</span>Popular tours</a>
+                    <li class="navigation__item"><a href="#section-tours"
+                            class="navigation__link"><span>03</span>Popular tours</a>
                     </li>
-                    <li class="navigation__item"><a href="#1" class="navigation__link"><span>04</span>Stories</a></li>
-                    <li class="navigation__item"><a href="#1" class="navigation__link"><span>05</span>Book now</a></li>
+                    <li class="navigation__item"><a href="#section-stories"
+                            class="navigation__link"><span>04</span>Stories</a></li>
+                    <li class="navigation__item"><a href="#section-book" class="navigation__link"><span>05</span>Book
+                            now</a></li>
                 </ul>
             </nav>
         </div>
