--- a/index.html
+++ b/index.html
@@ -25,19 +25,11 @@
 
             <nav class="navigation__nav">
                 <ul class="navigation__list">
-                    <li class="navigation__item"><a href="#section-about" class="navigation__link"><span>01</span>About
-                            Natours</a>
-                    </li>
-                    <li class="navigation__item"><a href="#section-features"
-                            class="navigation__link"><span>02</span>Your benefits</a>
-                    </li>
-                    <li class="navigation__item"><a href="#section-tours"
-                            class="navigation__link"><span>03</span>Popular tours</a>
-                    </li>
-                    <li class="navigation__item"><a href="#section-stories"
-                            class="navigation__link"><span>04</span>Stories</a></li>
-                    <li class="navigation__item"><a href="#section-book" class="navigation__link"><span>05</span>Book
-                            now</a></li>
+                    <li class="navigation__item"><a href="#section-about" class="navigation__link"><span>01</span>About Natours</a></li>
+                    <li class="navigation__item"><a href="#section-features" class="navigation__link"><span>02</span>Your benefits</a></li>
+                    <li class="navigation__item"><a href="#section-tours" class="navigation__link"><span>03</span>Popular tours</a></li>
+                    <li class="navigation__item"><a href="#section-stories" class="navigation__link"><span>04</span>Stories</a></li>
+                    <li class="navigation__item"><a href="#section-book" class="navigation__link"><span>05</span>Book now</a></li>
                 </ul>
             </nav>
         </div>
@@ -56,7 +48,7 @@
                     <span class="heading-primary--sub">is where life happens</span>
                 </h1>
 
-                <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+                <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
             </div>
         </header>
 
@@ -161,12 +153,9 @@
                     </div>
                     <div class="col-1-of-2">
                         <div class="composition">
-                            <img src="img/nat-1-large.jpg" alt="Photo 1"
-                                class="composition__photo composition__photo--p1">
-                            <img src="img/nat-2-large.jpg" alt="Photo 2"
-                                class="composition__photo composition__photo--p2">
-                            <img src="img/nat-3-large.jpg" alt="Photo 3"
-                                class="composition__photo composition__photo--p3">
+                            <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+                            <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+                            <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
                         </div>
                     </div>
                 </div>
@@ -213,7 +202,7 @@
                 </div>
             </section>
 
-            <section class="section-tours">
+            <section class="section-tours" id="section-tours">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Most popular tours
@@ -248,7 +237,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$297</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -281,7 +270,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$497</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -314,7 +303,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$897</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -366,8 +355,7 @@
                             <figcaption class="story__caption">Jack Wilson</figcaption>
                         </figure>
                         <div class="story__text">
-                            <h3 class="heading-tertiary u-margin-bottom-small">WOW! My life is completely different now
-                            </h3>
+                            <h3 class="heading-tertiary u-margin-bottom-small">WOW! My life is completely different now</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci aliquam quidem culpa
                                 fugiat atque eum dolores doloribus consequatur, minus commodi ex sint sequi consequuntur
                                 ducimus voluptas tempora iste natus veniam. Quidema ut reprehenderit provident ad itaque
@@ -393,29 +381,25 @@
                                 </div>
 
                                 <div class="form__group">
-                                    <input type="text" class="form__input" id="name" name="name" placeholder="Full Name"
-                                        required>
+                                    <input type="text" class="form__input" id="name" name="name" placeholder="Full Name" required>
                                     <label for="name" class="form__label">Full name</label>
                                 </div>
 
                                 <div class="form__group">
-                                    <input type="email" class="form__input" id="email" name="email"
-                                        placeholder="Email address" required>
+                                    <input type="email" class="form__input" id="email" name="email" placeholder="Email address" required>
                                     <label for="email" class="form__label">Email address</label>
                                 </div>
 
                                 <div class="form__group u-margin-bottom-medium">
                                     <div class="form__radio-group">
-                                        <input type="radio" class="form__radio-input" id="small" name="size"
-                                            value="small">
+                                        <input type="radio" class="form__radio-input" id="small" name="size" value="small">
                                         <label for="small" class="form__radio-label">
                                             <span class="form__radio-button"></span>
                                             Small tour group
                                         </label>
                                     </div>
                                     <div class="form__radio-group">
-                                        <input type="radio" class="form__radio-input" id="large" name="size"
-                                            value="large">
+                                        <input type="radio" class="form__radio-input" id="large" name="size" value="large">
                                         <label for="large" class="form__radio-label">
                                             <span class="form__radio-button"></span>
                                             Large tour group
@@ -460,6 +444,37 @@
                 </div>
             </div>
         </footer>
+
+        <div class="popup" id="popup">
+            <div class="popup__content">
+                <div class="popup__left">
+                    <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+                    <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+                </div>
+                <div class="popup__right">
+                    <a href="#section-tours" class="popup__close">&times;</a>
+                    <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+                    <p class="popup__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna
+                        aliqua. Sed sed risus pretium quam. Aliquam sem et tortor consequat id. Volutpat odio facilisis
+                        mauris sit amet massa
+                        vitae. Mi bibendum neque egestas congue. Placerat orci nulla pellentesque dignissim enim sit.
+                        Vitae semper quis lectus
+                        nulla at volutpat diam ut venenatis. Malesuada pellentesque elit eget gravida cum sociis natoque
+                        penatibus et. Proin
+                        fermentum leo vel orci porta non pulvinar neque laoreet. Gravida neque convallis a cras semper.
+                        Molestie at elementum eu
+                        facilisis sed odio morbi quis. Faucibus vitae aliquet nec ullamcorper sit amet risus nullam
+                        eget. Nam libero justo
+                        laoreet sit. Amet massa vitae tortor condimentum lacinia quis vel eros donec. Sit amet facilisis
+                        magna etiam. Imperdiet
+                        sed euismod nisi porta.</p>
+                    <a href="#" class="btn btn--green">Book now</a>
+                </div>
+            </div>
+        </div>
+
     </body>
 
 </html>
