finished writing media queries :art:

--- a/index.html
+++ b/index.html
@@ -342,8 +342,7 @@
                             </h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci aliquam quidem culpa
                                 fugiat atque eum dolores doloribus consequatur, minus commodi ex sint sequi consequuntur
-                                ducimus voluptas tempora iste natus veniam. Quidema ut reprehenderit provident ad itaque
-                                quidem exercitationem, ipsa repudiandae.</p>
+                                ducimus voluptas tempora iste natus veniam. Quidema ut reprehenderit provident ad itaque.</p>
                         </div>
                     </div>
                 </div>
@@ -358,8 +357,7 @@
                             <h3 class="heading-tertiary u-margin-bottom-small">WOW! My life is completely different now</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci aliquam quidem culpa
                                 fugiat atque eum dolores doloribus consequatur, minus commodi ex sint sequi consequuntur
-                                ducimus voluptas tempora iste natus veniam. Quidema ut reprehenderit provident ad itaque
-                                quidem exercitationem, ipsa repudiandae.</p>
+                                ducimus voluptas tempora iste natus veniam. Quidema ut reprehenderit provident ad itaque.</p>
                         </div>
                     </div>
                 </div>
